# plugin

horizon_plugin/: setup.py
horizon_plugin/enabled/: _50_my_horizon_plugin.py
horizon_plugin/horizon_plugin/: panel.py
horizon_plugin/horizon_plugin/templates/horizon_plugin/: index.html
my_horizon_plugin/: setup.cfg
my_horizon_plugin/enabled/: _50_my_horizon_plugin.py
my_horizon_plugin/my_horizon_plugin/panels/: hello.py
