[metadata]
name = my_horizon_plugin
version = 0.1
summary = "A simple Hello World Horizon Plugin"
description-file =
    README.md
author = "Your Name"
author-email = "your.email@example.com"
home-page = "https://github.com/yourusername/my_horizon_plugin"
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.12

[files]
packages =
    my_horizon_plugin
